# qt_monkey

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.org  README.rst  README.ru.rst  agent.cpp  agent.hpp  agent_qtmonkey_communication.cpp  agent_qtmonkey_communication.hpp  appveyor.yml  common.cpp  common.hpp  compiler.cmake  custom_event_analyzer.hpp  custom_script_extension.hpp  jsedit.cpp  qtmonkey.cpp  qtmonkey.hpp  qtmonkey_app.cpp  qtmonkey_app_api.cpp  qtmonkey_app_api.hpp  qtmonkey_gui.cpp  qtmonkey_gui.hpp  qtmonkey_gui.ui  script.cpp  script.hpp  script_api.cpp  script_api.hpp  script_runner.cpp  script_runner.hpp  semaphore.hpp  shared_resource.hpp  user_events_analyzer.cpp  user_events_analyzer.hpp
docs/: CMakeLists.txt  doxygen.conf.in
tests/: gui_restart_test.py  run_gui_tests.py  test1.js  test_restart.js  unit_tests.cpp
tests/qt4/: CMakeLists.txt  main.cpp  mainwin.cpp  mainwin.hpp
tests/qt5/: CMakeLists.txt  main.cpp  mainwin.hpp
tests/test_app/: CMakeLists.txt  main.cpp  mainwin.cpp  mainwin.hpp  mainwin.ui  my_custom_button.cpp  my_custom_button.hpp  script_ext.cpp  script_ext.hpp
unit_tests/: run_unit_tests.cpp
